--- a/repoInitialize.yml
+++ b/repoInitialize.yml
@@ -4,7 +4,7 @@
 daysUntilMarked: 5
 
 # Label to use when marking as uninitialized
-initLabel: missing-team
+initLabel: missing-information
 
 # Comment to post when marking as uninitialized. Set to `false` to disable
 markComment: >
